<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".welcome_mvp.WelcomeActivity"
    style="@style/WelcomeScreen">

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/WelcomeScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical"
        tools:context=".welcome_mvp.WelcomeActivity"
        tools:layout_editor_absoluteX="-132dp"
        tools:layout_editor_absoluteY="-70dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="32dp"
            app:srcCompat="@drawable/cabal_logo"
            android:contentDescription="@string/title"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:text="@string/explanation" />

        <Button
            android:id="@+id/shortcut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
